--- a/css/styles.css
+++ b/css/styles.css
@@ -3,4 +3,172 @@
   padding: 0;
   box-sizing: border-box;
 }
+html {
+  font-size: 62.5%;
+}
+body {
+  font-size: 1.6rem;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+main {
+  flex: 1 0 auto;
+}
+.flex {
+  display: flex;
+}
+.flex-end {
+  justify-content: flex-end;
+}
+.flex-center {
+  justify-content: center;
+}
+.header {
+  width: 100%;
+  padding: 1.5rem 2rem;
+}
+.nav-list {
+  align-items: center;
+  display: flex;
+}
+.menu-icon {
+  opacity: 0.55;
+}
+.menu-icon:hover {
+  opacity: 1;
+}
+.nav-item {
+  font-size: 1.3rem;
+  list-style: none;
+  margin: 0 0.8rem;
+}
+.link {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.87);
+}
+.footer-link {
+  margin: 0 1rem 0 0;
+}
+.link-text:hover {
+  color: rgb(27, 27, 27);
+  text-decoration: underline;
+}
+.rounded {
+  border-radius: 50%;
+}
 
+.searcher {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.searcher-container {
+  margin: 8rem 0 0 0;
+}
+.align-self {
+  align-self: center;
+}
+.rounded-circle {
+  border-radius: 7rem;
+}
+.logo-container {
+  margin: 0 0 3rem;
+}
+.search-bar {
+  border: solid 1px rgba(0, 0, 0, 0.15);
+
+  width: 80%;
+  max-width: 52rem;
+  justify-content: space-evenly;
+  padding: 1rem 1.5rem;
+}
+.search-bar:hover {
+  box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.2);
+}
+.search-icon {
+  opacity: 0.55;
+}
+.search-input {
+  width: 90%;
+  border: none;
+  font-size: 1.6rem;
+}
+.search-input:focus {
+  outline: none;
+}
+
+.btn {
+  color: rgba(0, 0, 0, 0.76);
+  font-size: 1.5rem;
+  background-color: #f8f9fa;
+  border: none;
+  margin: 0 2rem;
+  padding: 1rem;
+  border-radius: 5px;
+}
+.buttons {
+  margin: 4rem 0 0 0;
+  justify-content: center;
+  width: 80%;
+}
+.btn:hover {
+  box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  border: 1px rgba(0, 0, 0, 0.158) solid;
+}
+.lang-google {
+  margin: 3rem 0 0 0;
+  display: flex;
+  font-size: 1.3rem;
+  justify-content: center;
+}
+.footer {
+  color: rgba(0, 0, 0, 0.644);
+  background-color: #f2f2f2;
+  height: 8rem;
+  font-size: 1.5rem;
+  color: rgba(0, 0, 0, 0.76);
+}
+.footer-header {
+  padding: 0 4rem;
+  height: 50%;
+  border-top: solid 1px #dddcdc;
+  border-bottom: solid 1px #dddcdc;
+  align-items: center;
+}
+.footer-content {
+  align-content: center;
+  padding: 0 4rem;
+  height: 50%;
+}
+.content-1,
+.content-2 {
+  align-self: center;
+}
+.content-2 {
+  margin: 0 0 0 auto;
+}
+@media (max-width: 900px) {
+  .footer {
+    height: 12.2rem;
+  }
+  .footer-header {
+    height: 33.3%;
+  }
+  .footer-content {
+    flex-direction: column;
+    height: 66.6%;
+    justify-content: space-around;
+  }
+  .content-1 {
+    order: 2;
+  }
+
+  .content-1,
+  .content-2 {
+    align-content: center;
+    margin: 0;
+  }
+}
